--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,6 +3,7 @@
   "header": {
     "search": "Search",
     "catalogue": "Catalog",
+    "home": "Home",
     "services": "Services",
     "calculator": "Calculator",
     "ourcompany": "Our Company",
