--- a/public/locales/ky/translation.json
+++ b/public/locales/ky/translation.json
@@ -2,6 +2,7 @@
   "notFoundText": "Кечиресиз, бул барак табылган жок.",
   "header": {
     "search": "Издөө",
+    "home": "Негизги",
     "catalogue": "Каталог",
     "services": "Кызматтар",
     "calculator": "Калькулятор",
