--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,6 +2,7 @@
   "notFoundText": "Извините, страница не найдена.",
   "header": {
     "search": "Поиск",
+    "home": "Главная",
     "catalogue": "Каталог",
     "services": "Услуги",
     "calculator": "Калькулятор",
