--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -156,7 +156,7 @@
       }
     },
     "country": {
-      "chine": "Chine",
+      "chine": "China",
       "korea": "Korea",
       "newItems": "New arrivals"
     },
