connect backend, fix some bugs

--- a/public/locales/ky/translation.json
+++ b/public/locales/ky/translation.json
@@ -4,7 +4,6 @@
     "search": "Издөө",
     "home": "Негизги",
     "catalogue": "Каталог",
-    "services": "Кызматтар",
     "calculator": "Калькулятор",
     "ourcompany": "Биздин компания",
     "HeaderCatalog": {
@@ -53,6 +52,45 @@
       "accounting": "каттоодон чыгаруу (РЭО ГАИ)",
       "insurance": "Толук камсыздандыруу",
       "auto": "Кыргызстанга жеткиргенге чейин"
+    }
+  },
+  "AboutUs": {
+    "AboutCompanyTitle": "« Impex Corp » компаниясы Корея жана Кытайдан автоунааларды сатып алуу жана импорттоо боюнча кызмат көрсөтөт!",
+    "AboutUsTitle": "Добро пожаловать в автосалон Impex Corp ",
+    "AboutUsText": {
+      "bold": "Impex Corp ",
+      "thin": "— это авто компания, которая предлагает своим клиентам широкий ассортимент товаров и услуг, связанных с автомобильной индустрией. Став ведущим игроком на рынке, Impex Corp обладает несколькими ключевыми преимуществами, которые делают их идеальным выбором для покупателей."
+    },
+    "AboutUsTechnichUl": {
+      "quality": "Качественная работа",
+      "workersExp": "Опытные сотрудники",
+      "insurance": "Страховка автоперевозок",
+      "logistic": "Логистика"
+    },
+    "key": {
+      "bold": "Безупречная репутация  Impex Corp ",
+      "thin": "залог Вашей уверенности в сделке "
+    },
+    "receive": {
+      "title": "Вы получаете:",
+      "bold": "НАДЕЖНОСТЬ",
+      "thin": " наша компания за неполныйгод исполнила свыше 100 контрактов с более чем с 7 странами и 30 городами СНГ."
+    },
+    "choice": {
+      "bold": "ВЫБОР",
+      "thin": " одним из важных задач для нашей компании является подбор и доставка специальной техники, оборудования,сырья для горно-добывающей, легкой и сельско-хозяйственных промышленностей.А так же поставляем запасные части, аксессуары и химию для автомобилей.",
+      "bottom": "Так же компания «IMPEX CORP» развивается в направленииимпорта-экспорта продуктов питания и туризма.Основным видомдеятельности нашей компании является импорт-экспорт автомобилей из таких странкак Китай, Корея, Япония, ОАЭ, Грузия, Европа, США. "
+    },
+    "AboutUsBottom": {
+      "title": "Процесс покупки вашего авто из Кореи и Китая очень прост!",
+      "ul": {
+        "li1": "Определение направления( Китай, Корея.)",
+        "li2": "Критерии авто.",
+        "li3": "Расчет итоговой стоимости",
+        "li4": "Приобретение",
+        "li5": "Логистика"
+      },
+      "bottomTitle": "Ваша мечта в ваших руках!"
     }
   },
   "footer": {
