--- a/public/locales/ky/translation.json
+++ b/public/locales/ky/translation.json
@@ -110,18 +110,14 @@
     },
     "branches": {
       "name": "Филиалдар",
-      "menu": {
-        "address1": "Горький көч. 20а, Бишкек ш.",
-        "address2": "Анкара көч. 38а, Бишкек ш. ",
-        "address3": "Исакеева көч. 1/2, Бишкек ш"
+   "menu": {
+        "address1": "Усенбаева көч. 77, Бишкек"
       }
     },
     "contacts": {
       "name": "Байланыштар",
       "menu": {
-        "number1": "+996 (555) 25-12-56",
-        "number2": "+996 (700) 22-25-32",
-        "number3": "+996 (708) 04-02-90"
+        "number1": "+996 (500) 67-76-33"
       }
     }
   },
