--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -109,19 +109,15 @@
       }
     },
     "branches": {
-      "name": "Филиалы",
+      "name": "Филиал",
       "menu": {
-        "address1": "ул. Горького 20а, Бишкек",
-        "address2": "ул. Анкара 38а, Бишкек",
-        "address3": "ул. Исакеева 1/2, Бишкек"
+        "address1": "ул. Усенбаева 77, Бишкек"
       }
     },
     "contacts": {
       "name": "Контакты",
       "menu": {
-        "number1": "+996 (555) 25-12-56",
-        "number2": "+996 (700) 22-25-32",
-        "number3": "+996 (708) 04-02-90"
+        "number1": "+996 (500) 67-76-33"
       }
     }
   },
