--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -110,17 +110,13 @@
     "branches": {
       "name": "分支机构",
       "menu": {
-        "address1": "Gorkogo Street 20a, Bishkek",
-        "address2": "Ankara Street 38a, Bishkek",
-        "address3": "Isaakiev Street 1/2, Bishkek"
+        "address1": "77 Usenbaeva st. Bishkek"
       }
     },
     "contacts": {
       "name": "联系方式",
       "menu": {
-        "number1": "+996 (555) 25-12-56",
-        "number2": "+996 (700) 22-25-32",
-        "number3": "+996 (708) 04-02-90"
+        "number1": "+996 (500) 67-76-33"
       }
     }
   },
