--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -55,40 +55,46 @@
     }
   },
   "AboutUs": {
-    "AboutCompanyTitle": "Компания « Impex Corp » предоставляет услуги по покупке и  импорту авто из Кореи и Китая!",
-    "AboutUsTitle": "Добро пожаловать в автосалон Impex Corp ",
-    "AboutUsText": {
-      "bold": "Impex Corp ",
-      "thin": "— это авто компания, которая предлагает своим клиентам широкий ассортимент товаров и услуг, связанных с автомобильной индустрией. Став ведущим игроком на рынке, Impex Corp обладает несколькими ключевыми преимуществами, которые делают их идеальным выбором для покупателей."
+    "service_left": "Компания « Impex Corp » предоставляет услуги по покупке и  импорту авто из Кореи и Китая!",
+    "specialize_right": [
+      "Impex corp - это компания, специализирующаяся на продаже высококачественных автомобилей",
+      "Мы предлагаем широкий выбор новых и подержанных автомобилей различных марок и моделей, чтобы удовлетворить потребности самых требовательных клиентов.предлагает удобные условия покупки, включая программы финансирования и обмена автомобилей.",
+      "Мы делаем все возможное, сделать процесс приобретения автомобиля максимально простым и удобным для наших клиентов."
+    ],
+    "aboutCard": {
+      "title": "Что мы делаем",
+      "texts": [
+        "Продаем качественные автомобили из Китая и Кореи",
+        "Предлагаем хорошую консультацию и обслуживание",
+        "Предлагаем хороших экспертов и профессионалов"
+      ]
     },
-    "AboutUsTechnichUl": {
-      "quality": "Качественная работа",
-      "workersExp": "Опытные сотрудники",
-      "insurance": "Страховка автоперевозок",
-      "logistic": "Логистика"
+    "aboutCardBottom": {
+      "title": "Почему нас выбирают",
+      "texts": ["Онлайн платяжи", "Хорошее обслуживание", "Буксировка"]
     },
-    "key": {
-      "bold": "Безупречная репутация  Impex Corp ",
-      "thin": "залог Вашей уверенности в сделке "
-    },
-    "receive": {
-      "title": "Вы получаете:",
-      "bold": "НАДЕЖНОСТЬ",
-      "thin": " наша компания за неполныйгод исполнила свыше 100 контрактов с более чем с 7 странами и 30 городами СНГ."
-    },
-    "choice": {
-      "bold": "ВЫБОР",
-      "thin": " одним из важных задач для нашей компании является подбор и доставка специальной техники, оборудования,сырья для горно-добывающей, легкой и сельско-хозяйственных промышленностей.А так же поставляем запасные части, аксессуары и химию для автомобилей.",
-      "bottom": "Так же компания «IMPEX CORP» развивается в направленииимпорта-экспорта продуктов питания и туризма.Основным видомдеятельности нашей компании является импорт-экспорт автомобилей из таких странкак Китай, Корея, Япония, ОАЭ, Грузия, Европа, США. "
-    },
+
     "AboutUsBottom": {
-      "title": "Процесс покупки вашего авто из Кореи и Китая очень прост!",
-      "ul": {
-        "li1": "Определение направления( Китай, Корея.)",
-        "li2": "Критерии авто.",
-        "li3": "Расчет итоговой стоимости",
-        "li4": "Приобретение",
-        "li5": "Логистика"
+      "title": "Вы получите :",
+      "info": {
+        "text1": "Безупречная работа",
+        "text2": "залог вашей уверенности в сделке приобретая автомобиль или заказывая в ",
+        "span": "Impex Corp"
+      },
+      "receive": {
+        "span": "НАДЕЖНОСТЬ",
+        "text": " наша компания за неполныйгод исполнила свыше 100 контрактов с более чем с 7 странами и 30 городами СНГ."
+      },
+      "choice": {
+        "span": "ВЫБОР",
+        "text": "одним из важных задач для нашей компании является подбор и доставка специальной техники, оборудования,сырья для горно-добывающей, легкой и сельско-хозяйственных промышленностей.А так же поставляем запасные части, аксессуары и химию для автомобилей.",
+        "bottom": "Так же компания «IMPEX CORP» развивается в направленииимпорта-экспорта продуктов питания и туризма.Основным видомдеятельности нашей компании является импорт-экспорт автомобилей из таких странкак Китай, Корея, Япония, ОАЭ, Грузия, Европа, США. "
+      },
+
+      "li1": {
+        "span": "Impex Corp",
+        "text": "Так же компания",
+        "text2": "развивается в направлении импорта-экспорта продуктов питания и туризма. Основным видом деятельности нашей компании является импорт-экспорт автомобилей из таких стран как Китай, Япония, ОАЭ,Грузия, Европа, США"
       },
       "bottomTitle": "Ваша мечта в ваших руках!"
     }
