--- a/public/locales/ky/translation.json
+++ b/public/locales/ky/translation.json
@@ -1,7 +1,6 @@
 {
   "notFoundText": "Кечиресиз, бул барак табылган жок.",
   "header": {
-    "search": "Издөө",
     "home": "Негизги",
     "catalogue": "Каталог",
     "calculator": "Калькулятор",
@@ -122,6 +121,7 @@
     }
   },
   "Catalog": {
+    "search": "Издөө",
     "title": "Каталог",
     "filter": "Фильтирлөө",
     "characteristics": {
@@ -152,6 +152,7 @@
       }
     },
     "country": {
+      "all": "Баары",
       "chine": "Кытай",
       "korea": "Корея",
       "newItems": "Жаңылар"
