C:/Program Files/Git/

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -109,8 +109,7 @@
     "support": {
       "name": "Поддержка",
       "menu": {
-        "feedback": "Обратная связь",
-        "counseling": "Онлайн-консультации"
+        "feedback": "Обратная связь"
       }
     },
     "branches": {
