--- a/public/locales/ky/translation.json
+++ b/public/locales/ky/translation.json
@@ -109,8 +109,7 @@
     "support": {
       "name": "Колдоо",
       "menu": {
-        "feedback": "Кайра байланыш",
-        "counseling": "Онлайн консультациялар"
+        "feedback": "Кайра байланыш"
       }
     },
     "branches": {
@@ -175,35 +174,34 @@
       "title": "Издөө"
     }
   },
-  "Calculation":{
-    "Calculator":{
-      "brand":"Машина маркасы",
-      "text":"текст",
-      "price":"Баасы",
-      "power":"Күч",
-      "date_of_issue":"Чыгарылган датасы",
-      "type":"Кыймылдаткыч түрүн тандоо",
-      "petrol":"Бензин",
-      "diesel":"Дизель",
-      "hybrid":"Гибрид",
-      "electric":"Электрический",
-      "button":"Эсептоо",
-      "view":"Көрүү",
-      "bid":"Тендер",
-      "amount":"сом менен",
-      "duty":"Импорттук алым",
-      "five_percent":"5%",
-      "sum":"Суммасы",
-      "fees":"Бажы төлөмдөрү",
-      "som1":"557 сом Л.С.",
-      "VAT":"КНС",
-      "ten_percent":"10%",
-      "collection":"Кайра иштетүү чогултуу",
-      "som2":"0,17 x 20000 сом",
-      "Total":"Бардыгы",
+  "Calculation": {
+    "Calculator": {
+      "brand": "Машина маркасы",
+      "text": "текст",
+      "price": "Баасы",
+      "power": "Күч",
+      "date_of_issue": "Чыгарылган датасы",
+      "type": "Кыймылдаткыч түрүн тандоо",
+      "petrol": "Бензин",
+      "diesel": "Дизель",
+      "hybrid": "Гибрид",
+      "electric": "Электрический",
+      "button": "Эсептоо",
+      "view": "Көрүү",
+      "bid": "Тендер",
+      "amount": "сом менен",
+      "duty": "Импорттук алым",
+      "five_percent": "5%",
+      "sum": "Суммасы",
+      "fees": "Бажы төлөмдөрү",
+      "som1": "557 сом Л.С.",
+      "VAT": "КНС",
+      "ten_percent": "10%",
+      "collection": "Кайра иштетүү чогултуу",
+      "som2": "0,17 x 20000 сом",
+      "Total": "Бардыгы",
       "text1": "Автоунаанын баасын алдын ала эсептөө! Сатып алуу күнүндөгү акыркы наркы ар кандай болушу мүмкүн жана валютаны сатып алуу баасына жараша болот",
-      "button1":"Чалуу"
+      "button1": "Чалуу"
     }
   }
-
 }
