--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -109,8 +109,7 @@
     "support": {
       "name": "支持",
       "menu": {
-        "feedback": "反馈意见",
-        "counseling": "在线咨询"
+        "feedback": "反馈意见"
       }
     },
     "branches": {
@@ -175,34 +174,34 @@
       "title": "查找"
     }
   },
-  "Calculation":{
-    "Calculator":{
-      "brand":"汽車品牌",
-      "text":"文字",
-      "price":"價格",
-      "power":"力量",
-      "date_of_issue":"簽發日期",
-      "type":"選擇引擎類型",
-      "petrol":" 汽油",
-      "diesel":"柴油引擎",
-      "hybrid":"雜交種",
-      "electric":"電的",
-      "button":"計算",
-      "view":"看法",
-      "bid":"出價",
-      "amount":"金額以「索姆」為單位",
-      "duty":"進口關稅",
-      "five_percent":"5%",
-      "sum":"和",
-      "fees":"關稅",
-      "som1":"557 索姆 給 L.S.",
-      "VAT":"加值稅",
-      "ten_percent":"10%",
-      "collection":"回收收集",
-      "som2":"0.17 x 20000 索姆",
-      "Total":"全部的",
+  "Calculation": {
+    "Calculator": {
+      "brand": "汽車品牌",
+      "text": "文字",
+      "price": "價格",
+      "power": "力量",
+      "date_of_issue": "簽發日期",
+      "type": "選擇引擎類型",
+      "petrol": " 汽油",
+      "diesel": "柴油引擎",
+      "hybrid": "雜交種",
+      "electric": "電的",
+      "button": "計算",
+      "view": "看法",
+      "bid": "出價",
+      "amount": "金額以「索姆」為單位",
+      "duty": "進口關稅",
+      "five_percent": "5%",
+      "sum": "和",
+      "fees": "關稅",
+      "som1": "557 索姆 給 L.S.",
+      "VAT": "加值稅",
+      "ten_percent": "10%",
+      "collection": "回收收集",
+      "som2": "0.17 x 20000 索姆",
+      "Total": "全部的",
       "text1": "初步用車成本計算！購買當天的最終費用可能會有所不同，具體取決於貨幣的購買價格",
-      "button1":"稱呼"
-  }
+      "button1": "稱呼"
+    }
   }
 }
