fixed first block page

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -38,7 +38,7 @@
       }
     },
     "firstBlock": {
-      "title1": "Security, Reliability, and Style in every detail!",
+      "title1": "Security, reliability, and style in every detail!",
       "buttonText": "Call"
     },
     "OurServices": {
