--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -38,7 +38,7 @@
       }
     },
     "firstBlock": {
-      "title1": "Безопасность, Надежность и Стиль в каждой детали!",
+      "title1": "Безопасность, надежность и стиль в каждой детали!",
       "buttonText": "Позвонить"
     },
     "OurServices": {
