--- a/public/locales/ky/translation.json
+++ b/public/locales/ky/translation.json
@@ -38,7 +38,7 @@
       }
     },
     "firstBlock": {
-      "title1": "Коопсуздук, Ишенимдүү, ар бир майда-чүйдөсүнө чейин Стиль!",
+      "title1": "Коопсуздук, ишенимдүү, ар бир майда-чүйдөсүнө чейин стиль!",
       "buttonText": "Чалуу"
     },
     "OurServices": {
