added meta tags

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -15,6 +15,11 @@
           "japan": "Japan"
         }
       }
+    },
+    "MetaTags":{
+      "home":"ImpexCorp/Home",
+      "ourcompany":"ImpexCorp/Our Company",
+      "catalogue":"ImpexCorp/Catalog"
     }
   },
   "HomePage": {
