--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -15,6 +15,11 @@
           "japan": "Япония"
         }
       }
+    },
+    "MetaTags":{
+      "home":"ImpexCorp/Главная",
+      "ourcompany":"ImpexCorp/Наша компания",
+      "catalogue":"ImpexCorp/Каталог"
     }
   },
   "HomePage": {
