--- a/public/locales/ky/translation.json
+++ b/public/locales/ky/translation.json
@@ -70,9 +70,12 @@
     },
     "aboutCardBottom": {
       "title": "Эмне үчүн бизди тандаңыз",
-      "texts": ["Онлайн төлөмдөр", "Жакшы тейлөө", "Түрөө"]
+      "texts": [
+        "Онлайн төлөмдөр",
+        "Жакшы тейлөө",
+        "Түрөө"
+      ]
     },
-
     "AboutUsBottom": {
       "title": "Сиз аласыз:",
       "info": {
@@ -89,7 +92,6 @@
         "text": "ТАНДОО Биздин ишкананын алдында турган маанилуу милдеттердин бири — тоо-кен, женил жана айыл чарба енер жайлары учун атайын машиналарды, жабдууларды, сырьёлорду тандап алуу жана жеткируу. Биз ошондой эле унаалардын запастык бөлүктөрүн, аксессуарларды жана химиялык заттарды жеткиребиз.",
         "bottom": "“IMPEX CORP” компаниясы азык-түлүк товарларынын импорту-экспорту жана туризм багытында да өнүгүп жатат. Биздин компаниянын негизги ишмердүүлүгү Кытай, Корея, Япония, БАЭ, Грузия, Европа, АКШ сыяктуу өлкөлөрдөн автоунааларды импорттоо-экспорттоо болуп саналат."
       },
-
       "li1": {
         "span": "Impex Corp",
         "text": "Ошондой эле компания",
@@ -202,6 +204,29 @@
       "Total": "Бардыгы",
       "text1": "Автоунаанын баасын алдын ала эсептөө! Сатып алуу күнүндөгү акыркы наркы ар кандай болушу мүмкүн жана валютаны сатып алуу баасына жараша болот",
       "button1": "Чалуу"
+    }
+  },
+  "CarInfo": {
+    "titles": {
+      "common": {
+        "title": "Жалпы маалымат",
+        "car_type": "Түрү",
+        "number_doors": "Эшиктердин саны",
+        "number_seats": "Орундуктардын саны",
+        "mileage": "Пробег",
+        "period": "Чыгарылган жылы",
+        "transmission": "Коробка",
+        "drive": "Привод",
+        "trunk": "Багаждын көлөмү"
+      },
+      "engine": {
+        "title": "Мотор",
+        "eng_type": "Мотор түрү",
+        "power": "Күч",
+        "volume": "Объем (см³)",
+        "battery_capacity": "Батарея сыйымдуулугу",
+        "consumption": "Куйукүйүүчү май керектөө"
+      }
     }
   }
 }
