--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -70,9 +70,12 @@
     },
     "aboutCardBottom": {
       "title": "Почему нас выбирают",
-      "texts": ["Онлайн платяжи", "Хорошее обслуживание", "Буксировка"]
+      "texts": [
+        "Онлайн платяжи",
+        "Хорошее обслуживание",
+        "Буксировка"
+      ]
     },
-
     "AboutUsBottom": {
       "title": "Вы получите :",
       "info": {
@@ -89,7 +92,6 @@
         "text": "одним из важных задач для нашей компании является подбор и доставка специальной техники, оборудования,сырья для горно-добывающей, легкой и сельско-хозяйственных промышленностей.А так же поставляем запасные части, аксессуары и химию для автомобилей.",
         "bottom": "Так же компания «IMPEX CORP» развивается в направленииимпорта-экспорта продуктов питания и туризма.Основным видомдеятельности нашей компании является импорт-экспорт автомобилей из таких странкак Китай, Корея, Япония, ОАЭ, Грузия, Европа, США. "
       },
-
       "li1": {
         "span": "Impex Corp",
         "text": "Так же компания",
@@ -202,6 +204,29 @@
       "Total": "Итого",
       "text1": "Расчёт стоимости автомобиля предварительный! Итоговая стоимость на день покупки может отличаться и зависит от цены покупки валюты",
       "button1": "Позвонить"
+    }
+  },
+  "CarInfo": {
+    "titles": {
+      "common": {
+        "title": "Общая информация",
+        "car_type": "Тип кузова",
+        "number_doors": "Количество дверей",
+        "number_seats": "Количество мест",
+        "mileage": "Пробег",
+        "period": "Период выпуска",
+        "transmission": "Коробка передач",
+        "drive": "Привод",
+        "trunk": "Объём багажника"
+      },
+      "engine": {
+        "title": "Двигатель",
+        "eng_type": "Тип двигателя",
+        "power": "Мощность",
+        "volume": "Объем в см³",
+        "battery_capacity": "Ёмкость батареи",
+        "consumption": "Расход"
+      }
     }
   }
 }
