--- a/public/locales/ky/translation.json
+++ b/public/locales/ky/translation.json
@@ -107,7 +107,7 @@
     "title": "Каталог",
     "filter": "Фильтирлөө",
     "characteristics": {
-      "catalog": "Каталог",
+      "catalog": "Марка",
       "model": "Модел",
       "yearIssue": "Чыгарылган жылы",
       "wheel": {
