--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -107,7 +107,7 @@
     "title": "Каталог",
     "filter": "Фильтр",
     "characteristics": {
-      "catalog": "Каталог",
+      "catalog": "Марка",
       "model": "Модель",
       "yearIssue": "Год выпуска",
       "wheel": {
