--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -107,7 +107,7 @@
     "title": "目录",
     "filter": "筛选",
     "characteristics": {
-      "catalog": "目录",
+      "catalog": "品牌",
       "model": "型号",
       "yearIssue": "年份",
       "wheel": {
