--- a/public/locales/ky/translation.json
+++ b/public/locales/ky/translation.json
@@ -1,5 +1,6 @@
 {
   "notFoundText": "Кечиресиз, бул барак табылган жок.",
+  "notFoundData": "Кечиресиз, эч нерсе табылган жок.",
   "header": {
     "home": "Негизги",
     "catalogue": "Каталог",
