--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,5 +1,6 @@
 {
   "notFoundText": "Извините, страница не найдена.",
+  "notFoundData": "Извините, ничего не найдено.",
   "header": {
     "home": "Главная",
     "catalogue": "Каталог",
