--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -19,8 +19,8 @@
   },
   "HomePage": {
     "GreetingBlock": {
-      "title": "Добро пожаловать в автосалон Impex Corp",
-      "text": "Impex Corp — это авто компания, которая предлагает своим клиентам широкий ассортимент товаров и услуг, связанных с автомобильной индустрией. Став ведущим игроком на рынке, Impex Corp обладает несколькими ключевыми преимуществами, которые делают их идеальным выбором для покупателей",
+      "title": "Добро пожаловать в автосалон Impex Corp!",
+      "text": "Impex Corp — это компания, специализирующаяся на автомобильной индустрии и предлагающая своим клиентам широкий ассортимент товаров и услуг. Занимая ведущие позиции на рынке, Impex Corp выделяется своими ключевыми преимуществами, которые делают её идеальным выбором для покупателей.",
       "buttonText": "Подробнее"
     },
     "CatalogBlock": {
@@ -54,33 +54,33 @@
     }
   },
   "AboutUs": {
-    "main_title": "Компания « Impex Corp » предоставляет услуги по покупке и  импорту авто из Кореи и Китая!",
+    "main_title": "Компания \"Impex Corp\" предоставляет услуги по покупке и импорту автомобилей из Кореи, Китая и других стран.",
     "buttonText": "Позвонить",
-    "title": "Вы получите :",
+    "title": "Наши преимущества",
     "card1": {
-      "text": " для нашей компании является подбор и доставка специальной техники и оборудование. А так же поставляем запасные части, аксессуары и химию для автомобилей.",
-      "bold": "Выбор - один из важных задач"
+      "text": "Мы осуществляем подбор и доставку специализированной техники и оборудования, а также предлагаем широкий ассортимент запасных частей, аксессуаров и автомобильной химии.",
+      "bold": "Выбор - "
     },
     "card2": {
-      "bold": "Надежность - наша компания",
-      "text": "   за неполный год исполнила свыше 100 контрактов с более чем с 7 странами и 30 городами СНГ  "
+      "bold": "Надежность - ",
+      "text": " За неполный год наша компания успешно заключила более 100 контрактов с более чем 7 странами и 30 городами СНГ, подтверждая свою надежность и профессионализм."
     },
     "card3": {
-      "bold": "Так же компания “ Impex Corp “",
-      "text": " развивается в направленииимпорта-экспорта продуктов питания и туризма.Основным видомдеятельности нашей компании является импорт-экспорт автомобилей из таких странкак Китай, Корея, Япония, ОАЭ, Грузия, Европа, США. "
+      "bold": "Развитие - ",
+      "text": "Мы активно развиваемся в области импорта и экспорта продуктов питания и туризма, расширяя географию нашей деятельности и укрепляя позиции на мировом рынке."
     },
     "back": {
-      "span": "Impex Corp",
-      "text": "Безупречная работа ",
-      "text2": " - залог вашей уверенности в сделке приобретая автомобиль или заказывая в “ Impex Corp “"
+      "span": "“ Impex Corp “",
+      "text": "Безупречное обслуживание",
+      "text2": " - ваш путь к уверенной покупке автомобиля или заказу в нашей компании."
     },
-    "bottomTitle": " Основным видом деятельности нашей компании является импорт-экспорт автомобилей из таких стран как Китай, Япония, ОАЭ,Грузия, Европа, США "
+    "bottomTitle": "Наша компания специализируется на импорте и экспорте автомобилей из различных стран, включая Китай, Корею, Японию, ОАЭ, Грузию, Европу и США, обеспечивая клиентам доступ к широкому выбору высококачественных транспортных средств."
   },
   "footer": {
     "aboutus": {
       "name": "О нас",
       "menu": {
-        "company": "Наша копмания",
+        "company": "Наша компания",
         "services": "Услуги"
       }
     },
@@ -91,7 +91,7 @@
       }
     },
     "branches": {
-      "name": "Филиал",
+      "name": "Адрес",
       "menu": {
         "address1": "ул. Усенбаева 77, Бишкек"
       }
@@ -162,8 +162,7 @@
         "mileage": "Пробег",
         "period": "Период выпуска",
         "transmission": "Коробка передач",
-        "drive": "Привод",
-        "trunk": "Объём багажника"
+        "drive": "Привод"
       },
       "engine": {
         "title": "Двигатель",
