--- a/public/locales/ky/translation.json
+++ b/public/locales/ky/translation.json
@@ -1,6 +1,7 @@
 {
   "notFoundText": "Кечиресиз, бул барак табылган жок.",
   "notFoundData": "Кечиресиз, эч нерсе табылган жок.",
+  "backBtn": "Артка",
   "header": {
     "home": "Негизги",
     "catalogue": "Каталог",
