--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,6 +1,7 @@
 {
   "notFoundText": "Извините, страница не найдена.",
   "notFoundData": "Извините, ничего не найдено.",
+  "backBtn": "Назад",
   "header": {
     "home": "Главная",
     "catalogue": "Каталог",
