--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -126,7 +126,8 @@
         "title": "燃料",
         "diesel": "柴油",
         "petrol": "汽油",
-        "electro": "电动"
+        "electro": "电动",
+        "hybrid": "杂交种"
       },
       "driveUnit": {
         "title": "驱动",
