--- a/public/locales/ky/translation.json
+++ b/public/locales/ky/translation.json
@@ -127,6 +127,7 @@
         "diesel": "Дизель",
         "petrol": "Бензин",
         "electro": "Электр",
+        "gas": "Газ",
         "hybrid": "Гибрид"
       },
       "driveUnit": {
