--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -127,7 +127,8 @@
         "diesel": "Дизель",
         "petrol": "Бензин",
         "electro": "Электричество",
-        "hybrid": "Гибрид"
+        "hybrid": "Гибрид",
+        "gas": "Газ"
       },
       "driveUnit": {
         "title": "Привод",
