--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -124,21 +124,21 @@
       },
       "fuel": {
         "title": "燃料",
-        "diesel": "柴油",
+        "diesel": "柴油引擎",
         "petrol": "汽油",
-        "electro": "电动",
-        "hybrid": "杂交种"
+        "electro": "電子",
+        "hybrid": "雜交種",
+        "gas": "氣體"
       },
       "driveUnit": {
-        "title": "驱动",
-        "front": "前驱",
-        "rear": "后驱"
+        "title": "驱动"
       },
       "transmission": {
         "title": "传动",
-        "mechanical": "机械传动",
-        "automatic": "自动传动",
-        "stepless": "无级变速"
+        "mechanical": "機械地",
+        "automatic": "自動的",
+        "stepless": "無段變速",
+        "robot": "機器人"
       }
     },
     "country": {
