--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -127,18 +127,18 @@
         "diesel": "Diesel",
         "petrol": "Petrol",
         "electro": "Electro",
-        "hybrid": "Hybrid"
+        "hybrid": "Hybrid",
+        "gas": "Gas"
       },
       "driveUnit": {
-        "title": "Drive unit",
-        "front": "Front",
-        "rear": "Rear"
+        "title": "Drive unit"
       },
       "transmission": {
         "title": "Transmission",
-        "mechanical": "Mechanical",
+        "mechanical": "Manual",
         "automatic": "Automatic",
-        "stepless": "Stepless"
+        "stepless": "Variable",
+        "robot": "Robotic"
       }
     },
     "country": {
